Implement InstrumentableNode